--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,6 +4,8 @@
   <strong>Disclaimer:</strong> The information in this webpage is fictitious.
   <br />
   It is used for academic purposes only.
+  <br> <br>
+  Your location is Long: <%= long %> Lat: <%= lat %> 
   <figure>
     <img id="logo-size" src="img/CSUMB_logo.png" alt="CSUMB's Logo" />
   </figure>
