rearranged code in partials (header, footer)

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,16 @@
-<footer>
-  <hr />
-  CST336 Internet Programming. 2020&copy; Sedano <br />
-  <strong>Disclaimer:</strong> The information in this webpage is fictitious.
-  <br />
-  It is used for academic purposes only.
-  <br> <br>
-  Your location is Long: <%= long %> Lat: <%= lat %> 
-  <figure>
-    <img id="logo-size" src="img/CSUMB_logo.png" alt="CSUMB's Logo" />
-  </figure>
-</footer>
+    <footer>
+      <hr />
+      CST336 Internet Programming. 2020&copy; Sedano <br />
+      <strong>Disclaimer:</strong> The information in this webpage is fictitious.
+      <br />
+      It is used for academic purposes only.
+      <br> <br>
+      Your location is Long: <%= long %> Lat: <%= lat %> 
+      <figure>
+        <img id="logo-size" src="img/CSUMB_logo.png" alt="CSUMB's Logo" />
+      </figure>
+    </footer>
+  </body>
+<!-- closing body -->
+
+</html>
