--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,4 +10,14 @@
       rel="stylesheet"
     />
   </head>
-
+   <!-- This is the body -->
+    <!-- This is where we place the content of our website -->
+    <body>
+        
+      <header>
+          <h1> Bufferbloat </h1>
+      </header>
+      <hr />
+      <%- include("nav.ejs") %> 
+      
+      <br /><br />
