--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,6 +6,8 @@
       It is used for academic purposes only.
       <br> <br>
       Your location is Long: <%= long %> Lat: <%= lat %> 
+      <br>
+      From IP address: <%= IP %> 
       <figure>
         <img id="logo-size" src="img/CSUMB_logo.png" alt="CSUMB's Logo" />
       </figure>
